tests/paczka2/big_fuzzy/49496843.err
Error in line 2: A980 A103 57,1
Error in line 5: A980 S983 94,4
Error in line 3: bbLq A980 6,4
Error in line 14: 3PdbWi A103 90,47
Error in line 10: DXybkvh2 A103 5,5
Error in line 12: bbLq S983 61,3
Error in line 18: DXybkvh2 A980 12,0
Error in line 31: A980 S983 88,9
Error in line 36: 3PdbWi S983 29,2
Error in line 47: jMgYDL A980 93,1
Error in line 46: ekreLPKiAWn A980 1,7
Error in line 50: A980 A980 95,4
Error in line 54: jMgYDL A980 10,0
Error in line 67: jMgYDL A103 132,96
Error in line 74: 3PdbWi A980 71,4
Error in line 77: 3PdbWi S983 69,2
Error in line 62: jMgYDL A103 89,6
Error in line 82: DXybkvh2 A103 98,4
Error in line 75: KLEarGH S983 69,9
Error in line 86: 3PdbWi A980 65,34
Error in line 92: bbLq A980 65,5
Error in line 89: ekreLPKiAWn S655 40,0
Error in line 99: jMgYDL S983 56,7
Error in line 110: 3PdbWi S6~~ 274,7
Error in line 98: DXybkvh2 S655 54,8
Error in line 109: 3PdbWi S655 94,4
Error in line 126: 3PdbWi A980 11,4
Error in line 125: DXybkvh2 S983 94,9
Error in line 138: 3PdbWi S983 23,0
Error in line 137: DXybkvh2 A103 97,0
Error in line 147: DXybkvh2 A103 1,0
Error in line 152: DXybkvh2 A980 16,3
Error in line 153: bbLq A980 84,9
Error in line 155: bbLq S983 85,8
Error in line 158: bbLq A980 74,6
Error in line 159: bbLq S655 63,5
Error in line 145: A980 A103 336,2
Error in line 170: KLEarGH A103 88,5
Error in line 166: ekreLPKiAWn S655 127,7
Error in line 180: jMgYDL S655 4,2
Error in line 179: ekreLPKiAWn S983 42,4
Error in line 186: ekreLPKiAWn S655 25,4
Error in line 177: 3PdbWi A980 81,7
Error in line 187: KLEarGH S983 15,5
Error in line 188: ekreLPKiAWn S983 68,8
Error in line 204: ekreLPKiAWn A103 69,7
Error in line 212: ekreLPKiAWn S655 93,6
Error in line 207: A980 S655 96,1
Error in line 228: KLEarGH A980 44,5
Error in line 226: jMgYDL A103 20,5
Error in line 240: bbLq A103 55,h
Error in line 235: ekreLPKiAWn A103 10,0
